--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,7 +4,9 @@
     <dimen name="standart_button_height">80dp</dimen>
     <dimen name="normal_margin">16dp</dimen>
     <dimen name="large_margin">25dp</dimen>
-    <dimen name="big_text_size">20sp</dimen>
+    <dimen name="big_text_size">30sp</dimen>
+    <dimen name="normal_text_size">18sp</dimen>
     <dimen name="hole_size">70sp</dimen>
     <dimen name="very_big_text_size">50sp</dimen>
+    <dimen name="btn_corner_radius">50dp</dimen>
 </resources>
