--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,14 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <style name="big_button_style">
-        <item name="android:layout_width">@dimen/standart_button_width</item>
-        <item name="android:layout_height">@dimen/standart_button_height</item>
-        <item name="android:layout_margin">@dimen/normal_margin</item>
-        <item name="android:textSize">@dimen/big_text_size</item>
-        <item name="android:textStyle">bold</item>
-    </style>
-
     <style name="hole_style">
         <item name="android:layout_width">@dimen/hole_size</item>
         <item name="android:layout_height">@dimen/hole_size</item>
@@ -25,5 +16,18 @@
         <item name="android:textColor">@color/colorYellow</item>
         <item name="android:textStyle">normal</item>
         <item name="android:layout_margin">@dimen/normal_margin</item>
+    </style>
+
+    <style name="big_btn_style">
+        <item name="android:backgroundTint">@color/colorYellow</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:fontFamily">@font/sunny_spells_regular</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:clickable">true</item>
+        <item name="android:focusable">true</item>
+        <item name="android:textSize">@dimen/big_text_size</item>
+        <item name="android:layout_width">@dimen/standart_button_width</item>
+        <item name="android:layout_margin">@dimen/normal_margin</item>
+        <item name="android:layout_height">@dimen/standart_button_height</item>
     </style>
 </resources>
