--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,6 @@
     <dimen name="hole_size">70sp</dimen>
     <dimen name="very_big_text_size">50sp</dimen>
     <dimen name="btn_corner_radius">50dp</dimen>
+    <dimen name="icon_width">150dp</dimen>
+    <dimen name="icob_height">150dp</dimen>
 </resources>
